# ignite-demo

./: .env  .gitignore  README.md  config-cpp-client.xml  config-cpp.xml  ignite-demo.sln
projbin/: Library.ps1  README.md  build_toolbox.ps1  compile.ps1  start_ignite.ps1  start_requestprocessor.ps1  start_worker.ps1
src/Common/: AssignTopicFunc.cs  Common.csproj  DataGrid.cs  DataGridException.cs  IDataGrid.cs  IWorkerStatus.cs  WorkerJob.cs  WorkerStatus.cs
src/RequestProcessor/: Program.cs  RequestProcessor.csproj  appsettings.Development.json
src/RequestProcessor/Controllers/: ConfiguratorController.cs  DemoController.cs
src/RequestProcessor/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
src/RequestProcessor/Pages/Shared/: _Layout.cshtml
src/RequestProcessor/Properties/: launchSettings.json
src/Worker/: CMakeLists.txt  CMakePresets.json  DataGrid.hxx  DataGridIgnite.cxx  DataGridIgnite.hxx  Worker.cxx  Worker.hxx  WorkerStatus.cxx  WorkerStatus.hxx
src/Worker.NET/: Program.cs  Worker.NET.csproj  Worker.cs
src/Worker.NET/Properties/: launchSettings.json
src/Worker/cmake/: FindIgnite.cmake
